--- a/notebooks/Nityo-Exam-Processing.ipynb
+++ b/notebooks/Nityo-Exam-Processing.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "directory = os.getcwd()\n",
-    "file_name = '\\\\..\\\\src_file\\\\keppel-corporation-limited-annual-report-2018.pdf'\n",
+    "file_name = '/../src_file/keppel-corporation-limited-annual-report-2018.pdf'\n",
     "pdf = directory + file_name\n",
     "# Initialize the directory of the file"
    ]
@@ -227,7 +227,7 @@
     "            column += 1\n",
     "            x_pos = paragraph[0][0]\n",
     "            ws.cell(row = (row - 1), column = column, value = paragraph[1])\n",
-    "    wb.save(directory + '\\\\..\\\\outputs\\\\output.xlsx')\n",
+    "    wb.save(directory + '/../outputs/output.xlsx')\n",
     "    \n",
     "finalize_and_export(paragraphs)"
    ]
